Fixing spacing between name and quote

--- a/css/feed.css
+++ b/css/feed.css
@@ -112,12 +112,6 @@ body{
     flex-wrap: wrap;
 }
 
-.caption{
-    display: flex; 
-    flex-wrap: wrap;
-    overflow-wrap: break-word;
-    width: 50%;
-}
 
 /* Footer Styling */
 
